# seattle-election-guide

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  METHODOLOGY.md  Makefile  PROJECT.md  README.md  REVIEW_GUIDE.md  SOURCE_POLICY.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
config/adapters/: transit-riders-union.yaml
config/elections/: wa-2026-primary-inventory.yaml  wa-2026-primary.yaml
config/rendering/: pdf.yaml
config/scoring/: default.yaml
config/sources/: default.yaml
data/: README.md
data/extracted/: washington-stonewall-democrats-2026-primary.yaml
data/extracted/official/: king-county-2026-primary-candidates.csv  king-county-2026-primary-pco-democrats.csv  king-county-2026-primary-pco-republicans.csv  king-county-2026-seattle-precinct-crosswalk.csv
data/manifests/: README.md
data/manifests/evidence/: capture-11th-district-democrats-20260720T110200Z-e2abfb806561.json  capture-11th-district-democrats-20260720T110230Z-88bf8d63f942.json  capture-32nd-district-democrats-20260720T140034Z-f0f6fd2886de.json  capture-34th-district-democrats-20260720T140034Z-583c2706f538.json  capture-36th-district-democrats-20260720T140034Z-251c6b0eaa40.json  (+40 more)
data/normalized/: canonical-dataset.json  wa-2026-primary-inventory.json
docs/: BALLOT_INVENTORY.md  COLLECTION.md  ELECTION_INITIALIZATION.md  EVIDENCE_CAPTURE.md  HOSTING.md  NORMALIZATION.md  PUBLICATION_EXPORTS.md  RELEASE.md  RENDERING.md  SCORING.md  SOURCE_DISCOVERY.md  SOURCE_PANEL_EXPANSION_2026-07-23.md
src/election_guide/: __init__.py  cli.py  serialization.py  validation.py
tests/: test_cli.py  test_collection.py  test_collection_http.py  test_evidence.py  test_hosting.py  test_initialization.py  test_inventory.py  test_normalization.py  test_publication.py  test_release.py  test_rendering.py  test_scoring.py  test_sources.py  test_stonewall_evidence.py
(+107 files in other folders)
