[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seattle-election-guide"
version = "0.1.0"
description = "Auditable Seattle election endorsement consensus guide"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Scott Haug" }]
dependencies = [
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.15,<1",
]

[project.scripts]
election-guide = "election_guide.cli:app"

[dependency-groups]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/election_guide"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
